# pico-sdk

./: .bazelignore  .bazelrc  .gitignore  .gitmodules  BUILD.bazel  CMakeLists.txt  CONTRIBUTING.md  Guia-linux.md  MODULE.bazel  README-pt-BR.md  README.md  REPO.bazel  init-submodules.sh  pico_sdk_init.cmake  pico_sdk_version.cmake
bazel/: BUILD.bazel  README.md  defs.bzl  generate_config_header.bzl  generate_version_header.py  parse_version.py  pico_btstack_make_gatt_header.bzl
bazel/config/: BUILD.bazel
bazel/constraint/: BUILD.bazel
bazel/include/pico/: config_autogen.h
bazel/platform/: BUILD.bazel
bazel/toolchain/: BUILD.bazel  clang.BUILD  configurable_feature.bzl  gcc_arm_none_eabi.BUILD  objcopy.bzl  pico.bzl
bazel/util/: define_transition.bzl  label_flag_matches.bzl  multiple_choice_flag.bzl  sdk_define.bzl  transition.bzl
docs/: CMakeLists.txt  Doxyfile.in  DoxygenLayout.xml  DoxygenLayout.xml.in  header.html  index.h  mainpage.md  weblinks_page.md
src/: BUILD.bazel  CMakeLists.txt  board_setup.cmake  combined-docs.cmake  host.cmake  rp2040.cmake  rp2350-arm-s.cmake  rp2350-riscv.cmake  rp2_common.cmake
src/boards/: BUILD.bazel  generic_board.cmake  pico_w.cmake
src/cmake/: no_hardware.cmake  on_device.cmake  rp2_common.cmake
src/common/: README.md
src/common/boot_picobin_headers/: BUILD.bazel  CMakeLists.txt
src/common/boot_picoboot/: BUILD.bazel
src/common/boot_picoboot_headers/: BUILD.bazel  CMakeLists.txt
src/common/boot_uf2/: BUILD.bazel
src/common/boot_uf2_headers/: BUILD.bazel  CMakeLists.txt
src/common/hardware_claim/: BUILD.bazel
src/common/pico_async_context/: BUILD.bazel  CMakeLists.txt  async_context_freertos.c
src/common/pico_base/: BUILD.bazel  CMakeLists.txt  generate_config_header.cmake
src/common/pico_base_headers/: BUILD.bazel  CMakeLists.txt
src/common/pico_binary_info/: BUILD.bazel  CMakeLists.txt  binary_info.bzl
src/common/pico_bit_ops/: BUILD.bazel
src/common/pico_bit_ops_headers/: BUILD.bazel  CMakeLists.txt
src/common/pico_divider/: BUILD.bazel
src/common/pico_divider_headers/: BUILD.bazel  CMakeLists.txt
src/common/pico_lwip/: BUILD.bazel  CMakeLists.txt  altcp_tls_mbedtls.c  lwip.BUILD
src/common/pico_stdlib/: BUILD.bazel
src/common/pico_stdlib_headers/: BUILD.bazel  CMakeLists.txt
src/common/pico_sync/: BUILD.bazel  CMakeLists.txt  cond.c  critical_section.c  lock_core.c  mutex.c  sem.c
src/common/pico_time/: BUILD.bazel  CMakeLists.txt  time.c
src/common/pico_usb_reset_interface/: BUILD.bazel  CMakeLists.txt
src/common/pico_usb_reset_interface_headers/: BUILD.bazel  CMakeLists.txt
src/common/pico_util/: BUILD.bazel  CMakeLists.txt  datetime.c  pheap.c  queue.c
src/host/: BUILD.bazel  CMakeLists.txt
src/host/hardware_divider/: BUILD.bazel
src/host/hardware_gpio/: BUILD.bazel  gpio.c
src/host/hardware_irq/: BUILD.bazel  CMakeLists.txt  irq.c
src/host/hardware_sync/: BUILD.bazel  sync_core0_only.c
src/host/hardware_timer/: BUILD.bazel
src/host/hardware_uart/: BUILD.bazel  uart.c
src/host/pico_bit_ops/: BUILD.bazel
src/host/pico_divider/: BUILD.bazel
src/host/pico_multicore/: BUILD.bazel  CMakeLists.txt
src/host/pico_platform/: BUILD.bazel  CMakeLists.txt  platform_base.c
src/host/pico_printf/: BUILD.bazel
src/host/pico_rand/: BUILD.bazel  CMakeLists.txt  rand.c
src/host/pico_runtime/: BUILD.bazel  CMakeLists.txt
src/host/pico_status_led/: BUILD.bazel  CMakeLists.txt  status_led.c
src/host/pico_stdio/: BUILD.bazel  CMakeLists.txt
src/host/pico_stdlib/: BUILD.bazel  CMakeLists.txt
src/host/pico_time_adapter/: BUILD.bazel  CMakeLists.txt  time_adapter.c
src/rp2040/: rp2040_interface_pins.json
src/rp2040/boot_stage2/: BUILD.bazel  CMakeLists.txt  boot2_at25sf128a.S  boot2_generic_03h.S  boot2_is25lp080.S  boot2_w25q080.S
src/rp2040/hardware_regs/: BUILD.bazel  RP2040.svd  rp2040.svd
src/rp2040/hardware_structs/: BUILD.bazel
src/rp2040/pico_platform/: BUILD.bazel  CMakeLists.txt  platform.c
src/rp2_common/: BUILD.bazel  CMakeLists.txt
test/cmsis_test/: BUILD.bazel  CMakeLists.txt  cmsis_test.c
test/hardware_irq_test/: BUILD.bazel  CMakeLists.txt  hardware_irq_test.c
test/hardware_pwm_test/: BUILD.bazel  CMakeLists.txt  hardware_pwm_test.c
test/hardware_sync_spin_lock_test/: BUILD.bazel  CMakeLists.txt  hardware_sync_spin_lock_test.c
test/kitchen_sink/: BUILD.bazel  CMakeLists.txt  kitchen_sink.c  lwipopts.h  mbedtls_config.h  trivial.pio
test/pico_btstack_mesh_test/: CMakeLists.txt  btstack_config.h  lwipopts.h  lwipopts_examples_common.h  mesh_node_demo.c  mesh_node_demo.gatt  mesh_node_demo.h
test/pico_cond_test/: BUILD.bazel  CMakeLists.txt  pico_cond_test.c
test/pico_divider_test/: BUILD.bazel  CMakeLists.txt  pico_divider_nesting_test.c  pico_divider_test.c
test/pico_float_test/: BUILD.bazel  CMakeLists.txt  custom_double_funcs_test.c  custom_float_funcs_test.c  hazard3_test_gen.c  m33.c  pico_double_test.c  pico_float_test.c  pico_float_test_hazard3.c
test/pico_sem_test/: BUILD.bazel  CMakeLists.txt  pico_sem_test.c
test/pico_sha256_test/: BUILD.bazel  CMakeLists.txt  pico_sha256_test.c
test/pico_stdio_test/: BUILD.bazel  CMakeLists.txt
tools/: BUILD.bazel  CMakeLists.txt  FindELF2UF2.cmake  FindPioasm.cmake  Findpicotool.cmake  Findpioasm.cmake  bazel_build.py  bazel_common.py  build_all_headers.py  check_all_board_headers.sh  check_all_groups.py  check_board_header.py  check_source_files_in_bazel_build.py  compare_build_systems.py  copro_dis.py  extract_build_defines.py  extract_cmake_configs.py  extract_cmake_functions.py  extract_configs.py  run_all_bazel_checks.py  uf2_aspect.bzl
tools/elf2uf2/: BUILD.bazel  CMakeLists.txt  elf.h  main.cpp
tools/example_keys/: private.pem
tools/pioasm/: BUILD.bazel  CMakeLists.txt  ada_output.cpp  binary_output.cpp  c_sdk_output.cpp  constexpr_output.cpp  go_output.cpp  json_output.cpp  lexer.ll  main.cpp  output_format.h  parser.yy  pio_assembler.cpp  pio_assembler.h  pio_disassembler.cpp  pio_disassembler.h  pio_enums.h  pio_types.h  python_output.cpp  version.h.in
(+768 files in other folders)
